--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     background-color: mediumseagreen;
     border: 2px solid black;
     border-radius: 16px;
-    padding: 30px;
+    padding: 60px;
 }
 .img{
     width: 50px;
@@ -31,4 +31,16 @@
     margin-left: 10px;
     background-color: blue;
     color: white;   
+}
+
+#submitBtn{
+    margin-left: 50px;
+    width: 80px;
+    height: 40px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
 }
