--- a/style.css
+++ b/style.css
@@ -44,3 +44,16 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
 }
+
+#loader{
+    position: absolute;
+    background-color: transparent;
+    top: 60px;
+    left: 300px;
+    
+   
+}
+.gif{
+    width: 60px;
+    height: 60px;
+}
