--- a/style.css
+++ b/style.css
@@ -1,60 +1,85 @@
-.largest{
+body {
+    font-family: Arial, sans-serif;
+  }
+  
+  #container-1,
+  #container-2 {
+    width: 600px;
+    margin: 0 auto;
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  .big-div {
+    text-align: center;
+  }
+  
+  .img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+  }
+  
+  button {
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-right: 10px;
+    color: #fff;
+    background-color: #007bff;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+  button:hover {
+    background-color: #0069d9;
+  }
+  
+  input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  #submitBtn {
+    background-color: #28a745;
+  }
+  
+  #submitBtn:hover {
+    background-color: #218838;
+  }
+  
+  #signup-msg p {
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  #signup-msg #success-msg {
+    color: #28a745;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+  }
+  
+  #signup-msg #failed-msg {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+  }
+  
+  #loader,
+  #loader1 {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-#container-1, #container-2{
-    width: fit-content;
-    height: 250px;
-    background-color: mediumseagreen;
-    border: 2px solid black;
-    border-radius: 16px;
-    padding: 60px;
-}
-.img{
+    margin-top: 20px;
+  }
+  
+  .gif {
     width: 50px;
     height: 50px;
-    margin-left: 50px;
-    margin-top: 10px;
-}
-#signUp, #logIn {
-    width: 80px;
-    height: 40px;
-    border-radius: 10px;
-    border: none;
-    background-color: goldenrod;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-}
-#logIn{
-    margin-left: 10px;
-    background-color: blue;
-    color: white;   
-}
-
-#submitBtn{
-    margin-left: 50px;
-    width: 80px;
-    height: 40px;
-    background-color: black;
-    color: white;
-    border-radius: 10px;
-    border: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-}
-
-#loader,
-#loader1 {
-    position: absolute;
-    background-color: transparent;
-    top: 60px;
-    left: 300px;
-    
-   
-}
-.gif{
-    width: 60px;
-    height: 60px;
-}
+  }
+  
